# metaDMG-core

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  api-cli.html  api-main.html  api-utils.html  cli.py  command-line-interface.html  config_all.yaml  config_forward.yaml  config_forward_Bayesian.yaml  config_mikkel.yaml  config_modes.yaml  config_vincent.yaml  config_weight0.yaml  config_weight1.yaml  convert-test-no-query.csv  convert-test.csv  coverage.xml  dashboard.html  dashtest.py  environment.yaml  file.html  genindex.html  getting-started.html  index.html  introduction.html  main.py  metaDMG-cpp  misincorporation.txt  objects.inv  pass_test.py  publish.sh  py-modindex.html  pyproject.toml  results.html  search.html  (+5 more)
.github/workflows/: ci-cd.yaml  ci-cd.yml  docs_pages.yaml  docs_pages.yml  pendulum_test.yaml  test.yml
_modules/: index.html
_modules/metaDMG/: filters.html  main.html  utils.html
_sources/: api-cli.md.txt  command-line-interface.md.txt  dashboard.md.txt  getting-started.md.txt  tutorial.md.txt
_static/: documentation_options.js
cache/: cache.db  cache.db-shm
docs/: conf.py  index.rst
docs/source/: api-cli.md  api-main.md  api-utils.md  cli-api.rst  cli.md  command-line-interface.md  conf.py  dashboard.md  getting-started.md  index.md  index.rst  install.md  introduction.md  metaDMG.fit.rst  metaDMG.loggers.rst  metaDMG.rst  modules.rst  results.md  tutorial.md  workflow.md
docs/source/API/: md.md  rst.rst  test.rst
docs/source/mermaid/: jumphost.mmd  overview_workflow.mmd
metaDMG/: __main__.py  __version__.py  cli.py  cli_utils.py  filters.py  utils.py
src/metaDMG/: PMD.py  __init__.py  __main__.py  __version__.py  cli.py  cli_utils.py  errors.py  filters.py  loggers.py  main.py  utils.py
src/metaDMG/cli/: cli.py  cli_gui.py  cli_utils.py
src/metaDMG/data/: __init__.py  alignment.bam  data.py  names-mdmg.dmp
src/metaDMG/fit/: __init__.py  bayesian.py  fit_utils.py  fits.py  frequentist.py  mismatch_to_mapDamage.py  mismatches.py  results.py  serial.py  workflow.py
src/metaDMG/loggers/: log_config.yaml  loggers.py
src/metaDMG/viz/: __init__.py  _taxonomy.py  app.py  content.py  dashboard.py  figures.py  results.py  viz_utils.py
tests/: config_lca.yaml  run_tests.sh  test_metaDMG_cli.py  test_metaDMG_viz.py  test_utils.py
tests/testdata/: alignment.sorted.bam  nodes-mdmg.dmp
