[tool.poetry]
name = "metaDMG"
version = "0.20.6"
description = "metaDMG: Estimating ancient damage in (meta)genomic DNA rapidly"
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "metaDMG", from = "src" }]
repository = "https://github.com/metaDMG/metaDMG/"

# poetry install
# poetry install --with dev,fit,viz
[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.4.0"
click-help-colors = "^0.9.1"
PyYAML = "^6.0"
pandas = "^1.4.1"
scipy = "^1.8.0"
pyarrow = "^7.0.0"

# fit related packages: poetry install --with fit
[tool.poetry.group.fit]
optional = true
[tool.poetry.group.fit.dependencies]
logger-tt = "^1.7.0"
iminuit = "^2.10.0"
numpyro = "^0.9.1"
joblib = "^1.1.0"
psutil = "^5.9.0"
numba = "^0.55.1"

# viz related packages poetry install --with viz
[tool.poetry.group.viz]
optional = true
[tool.poetry.group.viz.dependencies]
metadmg-viz = "^0.12.0"

# docs related packages: poetry install --with docs
[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-click = "^3.1.0"
myst-parser = "^0.17.0"
sphinx-autodoc-typehints = "^1.17.0"
sphinx-copybutton = "^0.5.0"
autodocsumm = "^0.2.7"
sphinx-book-theme = "^0.2.0"

# scipy = { version = "^1.7.3", python = ">=3.9,<3.11" }

# if without dev: poetry install --with dev
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
pylint = "^2.12.2"
flake8 = "^4.0.1"
black = "^22.1.0"
ipykernel = "^6.8.0"
nbformat = "^5.1.3"
python-semantic-release = "^7.24.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
notebook = "^6.4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
metaDMG = "metaDMG.cli:cli_main"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"  # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
major_on_zero = false                       # keeps the major version at 0


# [tool.poe.tasks]
# clean = """
# # Multiline commands including comments work too. Unescaped whitespace is ignored.
# rm -rf .coverage
#        .mypy_cache
#        .pytest_cache
#        dist
#        ./**/__pycache__
# """
# format = "black ."  # strings are interpreted as commands by default
# _build = "poetry build"
# _publish = "poetry publish"
# version = { "shell" = "poetry version $(git describe --tags --abbrev=0)" }
# build = ["version", "_build"]
# release = ["clean", "format", "build", "_publish"]